testsuite/tests/parser/should_fail/ExportCommaComma.stderr

ExportCommaComma.hs:2:38: error: [GHC-58481]
    Parse error on input ‘,’.
    Expected one of 'as', 'hiding', 'module', 'qualified', 'type',
                    'export', 'label', 'dynamic', 'safe', 'interruptible', ...
